[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
image = "0.13.0"
colors-transform = "0.2.*"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
ocl = { version = "0.19.7", optional = true }
rayon = "1.*"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["from"] }

[features]
gpu = ["dep:ocl"]
